Change the way the commands needing sudo are executed.
Added code to validate if the owner process has a controlling TTY.
At the class initialization we run a test and if that test fails we will execute all of the subsequent sudo commands without a controlling TTY.
If the test passes we will all the subsequent commands using the controlling TTY version.